--- a/config-example.yml
+++ b/config-example.yml
@@ -8,7 +8,7 @@ graphhopper:
 
   # Possible options: car,foot,bike,bike2,mtb,racingbike,motorcycle (comma separated)
   # bike2 takes elevation data into account (like up-hill is slower than down-hill) and requires enabling graph.elevation.provider below
-  graph.flag_encoders: car
+  graph.flag_encoders: racingbike
 
 
   # Enable turn restrictions for car or motorcycle.
@@ -19,7 +19,7 @@ graphhopper:
 
 
   # To populate your graph with elevation data use SRTM, default is noop (no elevation)
-  # graph.elevation.provider: srtm
+   graph.elevation.provider: srtm
 
 
   # default location for cache is /tmp/srtm
