--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ graphhopper:
 
   # Possible options: car,foot,bike,bike2,mtb,racingbike,motorcycle (comma separated)
   # bike2 takes elevation data into account (like up-hill is slower than down-hill) and requires enabling graph.elevation.provider below
-  graph.flag_encoders: mapcrider2
+  graph.flag_encoders: mapcrider2|turn_cost=true,racingbike
 
 
   # Enable turn restrictions for car or motorcycle.
@@ -56,11 +56,11 @@ graphhopper:
   prepare.lm.landmarks: 16
 
   # Make landmark preparation parallel if you have enough RAM. Change this only if you know what you are doing and if the default worked for you.
-  prepare.lm.threads: 1
+  prepare.lm.threads: 2
 
   # avoid being stuck in a (oneway) subnetwork, see https://discuss.graphhopper.com/t/93
-  prepare.min_network_size: 200
-  prepare.min_one_way_network_size: 200
+  prepare.min_network_size: 0
+  prepare.min_one_way_network_size: 0
 
 
 
