--- a/prod-config.yml
+++ b/prod-config.yml
@@ -8,7 +8,7 @@ graphhopper:
 
   # Possible options: car,foot,bike,bike2,mtb,racingbike,motorcycle (comma separated)
   # bike2 takes elevation data into account (like up-hill is slower than down-hill) and requires enabling graph.elevation.provider below
-  graph.flag_encoders: racingbike
+  graph.flag_encoders: mapcrider2, racingbike
 
 
   # Enable turn restrictions for car or motorcycle.
@@ -19,15 +19,15 @@ graphhopper:
 
 
   # To populate your graph with elevation data use SRTM, default is noop (no elevation)
-   graph.elevation.provider: srtm
+  graph.elevation.provider: cgiar # multi
 
 
   # default location for cache is /tmp/srtm
-  # graph.elevation.cache_dir: ./srtmprovider/
+  graph.elevation.cache_dir: ./multielevationprovider/
 
 
   # If you have a slow disk or plenty of RAM change the default MMAP to:
-  # graph.elevation.dataaccess: RAM_STORE
+  graph.elevation.dataaccess: RAM_STORE
 
 
 
@@ -38,26 +38,25 @@ graphhopper:
   # contraction hierarchies (CH) is done to speed routing up. This requires more RAM/disc space for holding the
   # graph but less for every request. You can also setup multiple weightings, by providing a comma separated list.
   prepare.ch.weightings: fastest
-
-
-  # Disable the speed mode. Should be used only with routing.max_visited_nodes or when the hybrid mode is enabled instead
   # prepare.ch.weightings: no
+  # prepare.ch.landmarks: 64
+  # Disable the speed mode. Should be used only with routing.max_visited_nodes or when the hybrid mode is enabled instead
+  # prepare.ch.weightings: fastest
 
 
   # To make CH preparation faster for multiple flagEncoders you can increase the default threads if you have enough RAM.
   # Change this setting only if you know what you are doing and if the default worked for you.
-  # prepare.ch.threads: 1
+  prepare.ch.threads: 2
 
 
   # The hybrid mode can be enabled with
-  # prepare.lm.weightings: fastest
+  prepare.lm.weightings: fastest
 
   # To tune the performance vs. memory usage for the hybrid mode use
-  # prepare.lm.landmarks: 16
+  prepare.lm.landmarks: 64
 
   # Make landmark preparation parallel if you have enough RAM. Change this only if you know what you are doing and if the default worked for you.
-  # prepare.lm.threads: 1
-
+  #  prepare.lm.threads: 2
 
   # avoid being stuck in a (oneway) subnetwork, see https://discuss.graphhopper.com/t/93
   prepare.min_network_size: 200
@@ -70,20 +69,20 @@ graphhopper:
 
   # You can define the maximum visited nodes when routing. This may result in not found connections if there is no
   # connection between two points within the given visited nodes. The default is Integer.MAX_VALUE. Useful for flexibility mode
-  # routing.max_visited_nodes: 1000000
+  routing.max_visited_nodes: 1000000
 
 
   # If enabled, allows a user to run flexibility requests even if speed mode is enabled. Every request then has to include a hint routing.ch.disable=true.
   # Attention, non-CH route calculations take way more time and resources, compared to CH routing.
   # A possible attacker might exploit this to slow down your service. Only enable it if you need it and with routing.maxVisitedNodes
-  # routing.ch.disabling_allowed: true
+  routing.ch.disabling_allowed: true
 
 
   # If enabled, allows a user to run flexible mode requests even if the hybrid mode is enabled. Every such request then has to include a hint routing.lm.disable=true.
-  # routing.lm.disabling_allowed: true
+  routing.lm.disabling_allowed: true
 
   # Control how many active landmarks are picked per default, this can improve query performance
-  # routing.lm.active_landmarks: 4
+  routing.lm.active_landmarks: 8
 
 
   # You can limit the max distance between two consecutive waypoints of flexible routing requests to be less or equal
@@ -103,7 +102,8 @@ graphhopper:
 
 
   # Sort the graph after import to make requests roughly ~10% faster. Note that this requires significantly more RAM on import.
-  # graph.do_sort: true
+  #  graph.do_sort: true
+  graph.bytes_for_flags: 8
 
 
 
@@ -132,13 +132,13 @@ graphhopper:
 # Dropwizard server configuration
 server:
   applicationConnectors:
-  - type: http
-    port: 8989
-    # for security reasons bind to localhost
-    bindHost: localhost
+    - type: http
+      port: 8989
+      # for security reasons bind to localhost
+      bindHost: localhost
   requestLog:
-      appenders: []
+    appenders: []
   adminConnectors:
-  - type: http
-    port: 8990
-    bindHost: localhost
+    - type: http
+      port: 8990
+      bindHost: localhost
