--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ graphhopper:
 
   # Possible options: car,foot,bike,bike2,mtb,racingbike,motorcycle (comma separated)
   # bike2 takes elevation data into account (like up-hill is slower than down-hill) and requires enabling graph.elevation.provider below
-  graph.flag_encoders: mapcrider2,racingbike
+  graph.flag_encoders: mapcrider2, racingbike
 
 
   # Enable turn restrictions for car or motorcycle.
@@ -19,7 +19,7 @@ graphhopper:
 
 
   # To populate your graph with elevation data use SRTM, default is noop (no elevation)
-  graph.elevation.provider: cgiar # multi
+  graph.elevation.provider: srtm # multi
 
 
   # default location for cache is /tmp/srtm
@@ -37,9 +37,9 @@ graphhopper:
   # By default the speed mode with the 'fastest' weighting is used. Internally a graph preparation via
   # contraction hierarchies (CH) is done to speed routing up. This requires more RAM/disc space for holding the
   # graph but less for every request. You can also setup multiple weightings, by providing a comma separated list.
-#  prepare.ch.weightings: fastest
-  prepare.ch.weightings: no
-  # prepare.ch.landmarks: 64
+  prepare.ch.weightings: fastest
+  # prepare.ch.weightings: no
+  prepare.ch.landmarks: 16
   # Disable the speed mode. Should be used only with routing.max_visited_nodes or when the hybrid mode is enabled instead
   # prepare.ch.weightings: fastest
 
@@ -53,7 +53,7 @@ graphhopper:
   prepare.lm.weightings: fastest
 
   # To tune the performance vs. memory usage for the hybrid mode use
-  prepare.lm.landmarks: 64
+  prepare.lm.landmarks: 16
 
   # Make landmark preparation parallel if you have enough RAM. Change this only if you know what you are doing and if the default worked for you.
   #  prepare.lm.threads: 2
@@ -82,7 +82,7 @@ graphhopper:
   routing.lm.disabling_allowed: true
 
   # Control how many active landmarks are picked per default, this can improve query performance
-  routing.lm.active_landmarks: 8
+  routing.lm.active_landmarks: 4
 
 
   # You can limit the max distance between two consecutive waypoints of flexible routing requests to be less or equal
@@ -102,7 +102,7 @@ graphhopper:
 
 
   # Sort the graph after import to make requests roughly ~10% faster. Note that this requires significantly more RAM on import.
-  #  graph.do_sort: true
+#  graph.do_sort: true
   graph.bytes_for_flags: 8
 
 
