--- a/web/package.json
+++ b/web/package.json
@@ -27,13 +27,14 @@
     "browserify": "16.2.0",
     "browserify-swap": "0.2.2",
     "d3": "3.5.17",
+    "flatpickr": "4.4.6",
     "jquery": "3.3.1",
     "leaflet": "1.3.1",
     "leaflet-contextmenu": "1.4.0",
     "leaflet-loading": "0.1.24",
+    "mapbox-gl": "^0.53.0",
     "moment": "2.22.1",
-    "uglifyify": "5.0.0",
-    "flatpickr": "4.4.6"
+    "uglifyify": "5.0.0"
   },
   "devDependencies": {
     "jasmine": "3.1.0",
